@@ -80,7 +80,7 @@ public abstract class ObjectAttributeDescriptor {
             final LazyProperty lazyInfo = getter.getAnnotation(LazyProperty.class);
             if (lazyInfo != null) {
                 try {
-                    cacheValidator = lazyInfo.cacheValidator().newInstance();
+                    cacheValidator = lazyInfo.cacheValidator().getConstructor().newInstance();
                 } catch (Exception e) {
                     log.warn("Can't instantiate lazy cache validator '" + lazyInfo.cacheValidator().getName() + "'", e);
                 }
@@ -115,7 +115,7 @@ public abstract class ObjectAttributeDescriptor {
     }
 
     public boolean isNameProperty() {
-        return id.equals(DBConstants.PROP_ID_NAME);
+        return id.equals(DBConstants.PROP_ID_NAME) || orderNumber == 1;
     }
 
     public boolean isRemote()
